--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "start_dev": "nodemon app.js",
     "dev": "nodemon server.js"
   },
-
   "engines": {
     "node": "14.17.5"
   },
@@ -21,10 +20,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.1",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "4.1",
     "mongoose": "^6.11.5",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "openssl": "^2.0.0"
   }
 }
-
